overflow fix

--- a/dev/showcase/flip-3d-item-show-hide.less
+++ b/dev/showcase/flip-3d-item-show-hide.less
@@ -4,8 +4,6 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 400px;
-	height: 150px;
 	background-color: mediumblue;
 	color: #b7b7ff;
 	font-size: 60px;
